results/SVCOMP/specgen/log-StringValueOf01-2024_03_03_06_05_19.txt
public class StringValueOf01 {
    //@ requires args != null;
    //@ requires args.length == 0;
    //@ ensures \result == "diffblue";
    public static void main(String[] args) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        boolean booleanValue = false;
        char characterValue = 'T';
        int integerValue = 7;
        long longValue = 10000000000L; // L suffix indicates long
        float floatValue = 2.5f; // f indicates that 2.5 is a float
        double doubleValue = 33.333; // no suffix, double is default
        Object objectRef = "test"; // assign string to an Object reference

        String tmp = String.valueOf(charArray);
        assert tmp.equals("diffblue");

        tmp = String.valueOf(charArray, 3, 3);
        assert tmp.equals("fbl");

        tmp = String.valueOf(booleanValue);
        assert tmp.equals("false");

        tmp = String.valueOf(characterValue);
        assert tmp.equals("T");

        tmp = String.valueOf(integerValue);
        assert tmp.equals("7");

        tmp = String.valueOf(longValue);
        assert tmp.equals("10000000000");

        tmp = String.valueOf(floatValue);
        assert tmp.equals("2.5");

        tmp = String.valueOf(doubleValue);
        assert tmp.equals("33.333");

        tmp = String.valueOf(objectRef);
        assert tmp.equals("test");
    }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf01.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result == "diffblue";
                 ^
1 error

public class StringValueOf01 {
    //@ requires args != null;
    //@ requires args.length == 0;
    //@ ensures tmp.equals("diffblue");
    public static void main(String[] args) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        boolean booleanValue = false;
        char characterValue = 'T';
        int integerValue = 7;
        long longValue = 10000000000L; // L suffix indicates long
        float floatValue = 2.5f; // f indicates that 2.5 is a float
        double doubleValue = 33.333; // no suffix, double is default
        Object objectRef = "test"; // assign string to an Object reference

        String tmp = String.valueOf(charArray);
        assert tmp.equals("diffblue");

        tmp = String.valueOf(charArray, 3, 3);
        assert tmp.equals("fbl");

        tmp = String.valueOf(booleanValue);
        assert tmp.equals("false");

        tmp = String.valueOf(characterValue);
        assert tmp.equals("T");

        tmp = String.valueOf(integerValue);
        assert tmp.equals("7");

        tmp = String.valueOf(longValue);
        assert tmp.equals("10000000000");

        tmp = String.valueOf(floatValue);
        assert tmp.equals("2.5");

        tmp = String.valueOf(doubleValue);
        assert tmp.equals("33.333");

        tmp = String.valueOf(objectRef);
        assert tmp.equals("test");
    }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf01.java:4: error: cannot find symbol
    //@ ensures tmp.equals("diffblue");
                ^
  symbol:   variable tmp
  location: class StringValueOf01
1 error

public class StringValueOf01 {
    //@ requires args != null;
    //@ requires args.length == 0;
    //@ ensures String.valueOf(charArray).equals("diffblue");
    public static void main(String[] args) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        boolean booleanValue = false;
        char characterValue = 'T';
        int integerValue = 7;
        long longValue = 10000000000L; // L suffix indicates long
        float floatValue = 2.5f; // f indicates that 2.5 is a float
        double doubleValue = 33.333; // no suffix, double is default
        Object objectRef = "test"; // assign string to an Object reference

        String tmp = String.valueOf(charArray);
        assert tmp.equals("diffblue");

        tmp = String.valueOf(charArray, 3, 3);
        assert tmp.equals("fbl");

        tmp = String.valueOf(booleanValue);
        assert tmp.equals("false");

        tmp = String.valueOf(characterValue);
        assert tmp.equals("T");

        tmp = String.valueOf(integerValue);
        assert tmp.equals("7");

        tmp = String.valueOf(longValue);
        assert tmp.equals("10000000000");

        tmp = String.valueOf(floatValue);
        assert tmp.equals("2.5");

        tmp = String.valueOf(doubleValue);
        assert tmp.equals("33.333");

        tmp = String.valueOf(objectRef);
        assert tmp.equals("test");
    }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf01.java:4: error: cannot find symbol
    //@ ensures String.valueOf(charArray).equals("diffblue");
                               ^
  symbol:   variable charArray
  location: class StringValueOf01
1 error

public class StringValueOf01 {
    //@ requires args != null;
    //@ requires args.length == 0;
    //@ ensures String.valueOf(new char[] {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'}).equals("diffblue");
    public static void main(String[] args) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        boolean booleanValue = false;
        char characterValue = 'T';
        int integerValue = 7;
        long longValue = 10000000000L; // L suffix indicates long
        float floatValue = 2.5f; // f indicates that 2.5 is a float
        double doubleValue = 33.333; // no suffix, double is default
        Object objectRef = "test"; // assign string to an Object reference

        String tmp = String.valueOf(new char[] {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'});
        assert tmp.equals("diffblue");

        tmp = String.valueOf(charArray, 3, 3);
        assert tmp.equals("fbl");

        tmp = String.valueOf(booleanValue);
        assert tmp.equals("false");

        tmp = String.valueOf(characterValue);
        assert tmp.equals("T");

        tmp = String.valueOf(integerValue);
        assert tmp.equals("7");

        tmp = String.valueOf(longValue);
        assert tmp.equals("10000000000");

        tmp = String.valueOf(floatValue);
        assert tmp.equals("2.5");

        tmp = String.valueOf(doubleValue);
        assert tmp.equals("33.333");

        tmp = String.valueOf(objectRef);
        assert tmp.equals("test");
    }
}

